Test: Back-end