@@ -4,18 +4,18 @@ import ch.sbb.soundscore.SoundScore.entities.Song;
 import ch.sbb.soundscore.SoundScore.services.SongService;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import jakarta.transaction.Transactional;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.Mock;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
 import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.http.MediaType;
 import org.springframework.security.test.context.support.WithMockUser;
 import org.springframework.test.annotation.DirtiesContext;
+import org.springframework.test.context.TestPropertySource;
 import org.springframework.test.web.servlet.MockMvc;
 
-import java.util.Arrays;
 import java.util.List;
 
 import static org.hamcrest.Matchers.hasSize;
@@ -26,14 +26,22 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
 @SpringBootTest
+@TestPropertySource(locations = "classpath:application-test.properties")
 @AutoConfigureMockMvc
 public class SongControllerTest {
+
+    Song song1 = new Song("title", "picture", "audio", null, null);
+    Song song2 = new Song("title", "picture", "audio", null, null);
     @Autowired
     private MockMvc mockMvc;
-
     @Mock
     private SongService songService;
 
+    @BeforeEach
+    void setUp() {
+        song1 = songService.createEditSong(song1);
+        song2 = songService.createEditSong(song2);
+    }
 
 
     @Test
@@ -44,10 +52,7 @@ public class SongControllerTest {
         Song song = new Song();
         song.setId(1L);
         when(songService.createEditSong(any(Song.class))).thenReturn(song);
-        mockMvc.perform(post("/api/songs")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(new ObjectMapper().writeValueAsString(song)))
-                .andExpect(status().isOk());
+        mockMvc.perform(post("/api/songs").contentType(MediaType.APPLICATION_JSON).content(new ObjectMapper().writeValueAsString(song))).andExpect(status().isOk());
     }
 
     @Test
@@ -55,13 +60,12 @@ public class SongControllerTest {
     @Transactional
     @DirtiesContext
     void shouldUpdateSong() throws Exception {
-        Song song = new Song();
-        song.setId(1L);
-        when(songService.editSong(any(Song.class))).thenReturn(song);
-        mockMvc.perform(put("/api/songs")
-                        .contentType(MediaType.APPLICATION_JSON)
+        Song song = song1;
+        song.setTitle("new title");
+        mockMvc.perform(put("/api/songs").contentType(MediaType.APPLICATION_JSON)
                         .content(new ObjectMapper().writeValueAsString(song)))
-                .andExpect(status().isOk());
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.title").value("new title"));
     }
 
     @Test
@@ -69,71 +73,34 @@ public class SongControllerTest {
     @Transactional
     @DirtiesContext
     void shouldDeleteSong() throws Exception {
-        Song song = new Song();
-        song.setId(1L);
-        when(songService.getSongById(1L)).thenReturn(song);
-        mockMvc.perform(delete("/api/songs/1")
-                        .contentType(MediaType.APPLICATION_JSON))
-                .andExpect(status().isOk());
+        mockMvc.perform(delete("/api/songs/1").contentType(MediaType.APPLICATION_JSON)).andExpect(status().isOk()).andExpect(jsonPath("$.id").value(song1.getId()));
     }
 
     @Test
     @WithMockUser
-    @Transactional
-    @DirtiesContext
     void shouldGetSongById() throws Exception {
-        Song song = new Song();
-        song.setId(1L);
-        when(songService.getSongById(1L)).thenReturn(song);
-        mockMvc.perform(get("/api/songs/1")
-                        .contentType(MediaType.APPLICATION_JSON))
-                .andExpect(status().isOk());
+        mockMvc.perform(get("/api/songs/" + song1.getId()).contentType(MediaType.APPLICATION_JSON)).andExpect(status().isOk()).andExpect(jsonPath("$.id").value(song1.getId()));
     }
 
     @Test
     @WithMockUser
-    @Transactional
-    @DirtiesContext
     void shouldGetAllSongs() throws Exception {
-        Song song1 = new Song();
-        song1.setId(1L);
-        Song song2 = new Song();
-        song2.setId(2L);
-        List<Song> songs = Arrays.asList(song1, song2);
-        when(songService.getAllSongs()).thenReturn(songs);
-        mockMvc.perform(get("/api/songs/all")
-                        .contentType(MediaType.APPLICATION_JSON))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$", hasSize(2)))
-                .andExpect(jsonPath("$[0].id").value(1))
-                .andExpect(jsonPath("$[1].id").value(2));
+        List<Song> songs = List.of(song1, song2);
+        mockMvc.perform(get("/api/songs/all").contentType(MediaType.APPLICATION_JSON)).andExpect(status().isOk()).andExpect(jsonPath("$", hasSize(songs.size()))).andExpect(jsonPath("$[0].id").value(songs.get(0).getId())).andExpect(jsonPath("$[1].id").value(songs.get(1).getId())).andReturn();
     }
 
     @Test
-
     void shouldNotPerformSongOperations() throws Exception {
         Song song = new Song();
         song.setId(1L);
-        mockMvc.perform(post("/api/songs/create")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(new ObjectMapper().writeValueAsString(song)))
-                .andExpect(status().isForbidden());
+        mockMvc.perform(post("/api/songs/create").contentType(MediaType.APPLICATION_JSON).content(new ObjectMapper().writeValueAsString(song))).andExpect(status().isForbidden());
 
-        mockMvc.perform(put("/api/songs/edit")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(new ObjectMapper().writeValueAsString(song)))
-                .andExpect(status().isForbidden());
+        mockMvc.perform(put("/api/songs/edit").contentType(MediaType.APPLICATION_JSON).content(new ObjectMapper().writeValueAsString(song))).andExpect(status().isForbidden());
 
-        mockMvc.perform(delete("/api/songs/delete/1")
-                        .contentType(MediaType.APPLICATION_JSON))
-                .andExpect(status().isForbidden());
+        mockMvc.perform(delete("/api/songs/delete/1").contentType(MediaType.APPLICATION_JSON)).andExpect(status().isForbidden());
 
-        mockMvc.perform(get("/api/songs/get/1")
-                        .contentType(MediaType.APPLICATION_JSON))
-                .andExpect(status().isForbidden());
+        mockMvc.perform(get("/api/songs/get/1").contentType(MediaType.APPLICATION_JSON)).andExpect(status().isForbidden());
 
-        mockMvc.perform(get("/api/songs/get/all")
-                        .contentType(MediaType.APPLICATION_JSON))
-                .andExpect(status().isForbidden());
+        mockMvc.perform(get("/api/songs/get/all").contentType(MediaType.APPLICATION_JSON)).andExpect(status().isForbidden());
     }
 }
